Fixed weird text spacing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3157,7 +3157,7 @@ input, select, textarea {
 			}
 
 			p {
-				text-align: justify;
+				/*text-align: justify; */
 			}
 
 		/* Section/Article */
